--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>The Best Chocolate Chip Cookie11111s
-</title>
+		<title>
+		Cookie Recipe Starter
+		</title>
 	</head>
+	<h1>The Best Chocolate Chip Cookie11111s</h1>
 	<body>
 	</body>
 </html>
