--- a/index.html
+++ b/index.html
@@ -37,5 +37,16 @@
 		<li>4 cups chocolate chips</li>
 		<li>1 cup chopped walnuts or pecans(optional)</li>
 	</ul>
+	<h2>How to make Mama's Recipe: The Best Chocolate Chip Cookies</h2>
+	<ol>
+		<li>Preheat oven to 350 degrees</li>
+		<li>Beat butter and sugars together until light and fluffy</li>
+		<li>Stir in pudding mix milk and vanilla extract.</li>
+		<li>Beat in eggs.</li>
+		<li>Add dry ingredients and stir until combined.</li>
+		<li>Stir in chocolate chips and nuts.</li>
+		<li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.</li>
+		<li>Bake 8-10 minutes or until golden brown</li>
+	</ol>
 	</body>
 </html>
