--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
 		<li>Add dry ingredients and stir until combined.</li>
 		<li>Stir in chocolate chips and nuts.</li>
 		<li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.</li>
-		<li>Bake 8-10 minutes or until golden brown</li>
+		<li>Bake 8-10 minutes or until golden brown.</li>
 	</ol>
+	<h2>EXPERT TIPS</h2>
+	<blockquote><p>Use and ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies. if you didn't think these cookies could get any better, think again! Get creative use with 1/2 cup each of semisweet chocolate chips, peanut butter chips or butterscotch chips instead of the 2 cups semisweet chocolate chips. OMG these are so good!</p></blockquote>
+
+	<p>Got questions? Our experts have the answers. <a href="https://lmgtfy.com/">Email Me</a></p>
+	<h2>NUTRITION INFORMATION</h2>
+	<p>Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom</p>
+	<p>This recipe was altered from Open Source Recipe <a href="https://lmgtfy.com/"> for more recipes go here</a></p>
 	</body>
 </html>
